--- a/Lab1/SourceCode/MOOC/style.css
+++ b/Lab1/SourceCode/MOOC/style.css
@@ -1,5 +1,5 @@
-.dropdown-submenu {
-
+.dropdown-submenu, .dropdown-submenu li {
+    font-size:30px;
     position: relative;
 }
 
@@ -7,6 +7,7 @@
     top: 0;
     left: 100%;
     margin-top: -1px;
+
 }
 #category{
 'display' : 'block'
@@ -29,12 +30,16 @@
     font-size: 17px;
     border: none;
 }
-
+.topnav button {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+}
 .topnav .search-container button {
     float: right;
     padding: 6px 10px;
     margin-top: 8px;
-    margin-right: 16px;
     background: #ddd;
     font-size: 17px;
     border: none;
@@ -60,4 +65,58 @@
     .topnav input[type=text] {
         border: 1px solid #ccc;
     }
+}
+.demoImg{
+    height:200px;
+    width:95%;
+    transition: transform .2s;
+}
+.demoImg:hover {
+    transform: scale(1.1);
+}
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+.text {
+    background-color: skyblue;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
+.dcontainer:hover .demoImg {
+    opacity: 0.3;
+}
+
+.dcontainer:hover .middle {
+    opacity: 1;
+}
+.title{
+    text-align: center;
+    padding: 6px;
+    margin-top: 8px;
+    background-color: lightblue;
+    color:whitesmoke;
+    font-size: 35px;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: 30;
+}
+
+/* Standard syntax */
+@keyframes example {
+    from {color: lightgreen;}
+    to {color: white;}
+}
+#registerBtn{
+    margin-top: 10px
+}
+hr {
+    border: 1px solid black;
 }
