--- a/Lab1/SourceCode/MOOC/style.css
+++ b/Lab1/SourceCode/MOOC/style.css
@@ -100,3 +100,26 @@
     }
   }
 }
+.topnav2 {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav2 a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 2% 4%;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav2 a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav2 a.active {
+  background-color:	#000080;
+  color: white;
+}
