Setup Material2, added board component - needed basic UI to implement game logic.

--- a/Lab2/Snake/src/styles.css
+++ b/Lab2/Snake/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+/* Required Material2 Theme */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+/* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Oswald|Lato|Yellowtail');
+
+body {
+  background: rgba(46, 49, 49, 1);
+}
