Added most of game logic
Added logic for snake movement, fruit, and board update. Need to add collision detection and create main game loop.

--- a/Lab2/Snake/src/app/board/board.component.css
+++ b/Lab2/Snake/src/app/board/board.component.css
@@ -26,6 +26,10 @@ td {
   background: rgba(103, 128, 159, 1);
 }
 
-.active {
+.snake {
   background: rgba(46, 204, 113, 1);
+}
+
+.fruit {
+  background: rgba(242, 38, 19, 1);
 }
