--- a/Lab2/Snake/src/app/app.component.html
+++ b/Lab2/Snake/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-board (getScore)="setScore($event)">
-  <!-- Game Board -->
-</app-board>
+<div class="wrapper center">
+  <div class="header">
+    <div>Score: {{currentScore}}</div>
+    <div>High Score: {{highScore}}</div>
+  </div>
+  <app-board (getScore)="setScore($event)">
+    <!-- Game Board -->
+  </app-board>
+</div>
