--- a/Lab2/Snake/src/app/board/board.component.css
+++ b/Lab2/Snake/src/app/board/board.component.css
@@ -1,3 +1,28 @@
+.container {
+  position: relative;
+  width: 640px;
+  height: 640px;
+  margin: auto;
+  background: rgb(9, 9, 30);
+}
+
+.banner {
+  z-index: 1;
+  position: absolute;
+  background: darkblue;
+  color: white;
+  top: 50%;
+  left: 50%;
+  margin-left: -270px;
+  width: 540px;
+  margin-top: -25%;
+  height: 50%;
+  text-align: center;
+  padding: 3rem;
+  border: 2px solid white;
+  box-sizing: border-box;
+}
+
 /* Game Board */
 table {
   margin: auto;
@@ -5,17 +30,18 @@ table {
 }
 
 /* Snake Logo */
-th {
-  color: white;
-  text-align: left;
+h1 {
   font-family: 'Yellowtail', sans-serif;
+  font-size: 4rem;
+}
+
+h2 {
+  font-family: monospace;
   font-size: 2rem;
-  user-select: none;
 }
 
 /* Tiles */
 td {
-  background: rgb(9, 9, 30);
   height: 32px;
   width: 32px;
   padding: 0;
