--- a/Lab2/GoogleKG/MashUp/src/app/restaurant-search/restaurant-search.component.html
+++ b/Lab2/GoogleKG/MashUp/src/app/restaurant-search/restaurant-search.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="child-container">
-    <h2><b>Restaurant Seeker!
+    <h2><b>Restaurant Seeker
     </b></h2><br>
     <form>
       <div class="form-group">
@@ -10,7 +10,7 @@
             <input type="text" class="input" placeholder="City, State, or Zipcode ..." #place>
 
           </div><br>
-          <button type="button" id = "searchBtn" class="w3-button w3-red w3-round-xlarge w3-xxlarge col-lg-4 col-lg-offset-4 " (click)="getVenues()">Search for Restaurants NOW!</button>
+          <button type="button" id = "searchBtn" class="w3-button w3-red w3-round-xlarge w3-xxlarge col-lg-4 col-lg-offset-4 " (click)="getVenues()">Search for Restaurants</button>
 
         </div>
         </div>
