--- a/Lab2/GoogleKG/MashUp/src/app/google-kgsearch/google-kgsearch.component.html
+++ b/Lab2/GoogleKG/MashUp/src/app/google-kgsearch/google-kgsearch.component.html
@@ -1,6 +1,6 @@
 <div class="container"  >
   <div class="child-container">
-    <h2><b>SuperSearch Engine!
+    <h2><b>SuperSearch Engine
     </b></h2><br>
     <form>
       <div class="form-group">
@@ -10,7 +10,7 @@
             <input type="text" class="input" placeholder="Search Anything..." #place>
 
           </div><br>
-          <button type="button" id = "searchBtn" class="w3-button w3-red w3-round-xlarge w3-xxlarge col-lg-4 col-lg-offset-4 " (click)="getVenues()"> GET RESULTS NOW!</button>
+          <button type="button" id = "searchBtn" class="w3-button w3-red w3-round-xlarge w3-xxlarge col-lg-4 col-lg-offset-4 " (click)="getVenues()"> Get results now</button>
 
         </div>
       </div>
