--- a/Lab2/GoogleKG/MashUp/src/app/restaurant-search/restaurant-search.component.css
+++ b/Lab2/GoogleKG/MashUp/src/app/restaurant-search/restaurant-search.component.css
@@ -62,6 +62,7 @@ h2{
   border: 4px solid white;
   border-radius: 24px;
   box-sizing: border-box;
+  border-radius: 0px;
   align-content: center;
   transform:scale(0.95);
   transition-duration: 1s;
@@ -74,6 +75,7 @@ h2{
 #searchBtn {
   background-color: transparent!important;
   border: 4px solid white!important;
+  border-radius: 0px;
   font-size:30px!important;
   transform:scale(0.94);
   transition-duration:0.75s;
