--- a/Lab2/GoogleKG/MashUp/src/app/translate/translate.component.css
+++ b/Lab2/GoogleKG/MashUp/src/app/translate/translate.component.css
@@ -5,32 +5,35 @@
   color:white;
   border-style: groove;
   font-size:25px;
-  font-family: "Comic Sans MS";
+  font-family: "Helvetica";
   transform: scale(0.9);
   transition-duration:0.9s;
+  border-radius: 0px;
 }
 #resultBox h2 {
   text-align: center;
   font-size:50px;
-  font-family: Bahnschrift;
+  font-family: Helvetica;
+  border-radius: 0px;
 }
 #resultBox:hover {
-  background-color:lightgreen;
+  background-color:grey;
   transform: scale(1.0);
 }
 label{
   width:100%;
   margin: 10px 0px;
-  background-color:brown;
+  background-color:black;
   border-radius:15px;
-  font-family:"Comic Sans MS";
+  font-family:"Helvetica";
   font-size:20px;
   color:white;
 }
 option:checked {
-  background-color:lightblue!important;
+  background-color:white!important;
   margin-left: 25px;
-  border: 1px solid blue;
+  border: 1px solid black;
+  border-radius: 0px;
 }
 
 .displayText {
@@ -38,6 +41,6 @@ option:checked {
   padding: 8px;
   font-weight:bolder;
   font-size:35px;
-  font-family:"Comic Sans MS";
+  font-family:"Helvetica";
   color:yellow;
 }
