added css features to the Mashup-new

--- a/Lab2/GoogleKG/MashUp-new/src/app/google-kgsearch/google-kgsearch.component.html
+++ b/Lab2/GoogleKG/MashUp-new/src/app/google-kgsearch/google-kgsearch.component.html
@@ -1,6 +1,6 @@
 <div class="container"  >
   <div class="child-container">
-    <h2><b>SuperSearch Engine!
+    <h2><b>SuperSearch Engine
     </b></h2><br>
     <form>
       <div class="form-group">
