--- a/Lab2/GoogleKG/MashUp-new/src/app/app.component.html
+++ b/Lab2/GoogleKG/MashUp-new/src/app/app.component.html
@@ -1,6 +1,11 @@
-<div class = 'image'>
+<div class = 'crossfade'>
+  <figure></figure>
+  <figure></figure>
+  <figure></figure>
+  <figure></figure>
+  <figure></figure>
   <app-header></app-header>
-  <div class="container">
+  <div class="container parallax">
     <div class="row">
       <div class="col-md-12">
         <router-outlet></router-outlet>
