Removed home components

--- a/Lab2/GoogleKG/MashUp-new/src/app/home/home.component.html
+++ b/Lab2/GoogleKG/MashUp-new/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="parent-container">
   <div class="child-container">
-    <h2>Hello, Welcome to <b>Find Your Recipe!!!
+    <h2>Hello, Welcome to <b>SuperSearch
     </b></h2>
-    <span class="desc">FInd Your Recipe is a Mashup Web Application which is built using <i>Foursquare & Edamam's Recipe Search API</i> . This application find Recipe and Place to find that Food.</span><br><br><br>
+    <span class="desc"></span><br><br><br>
     <form>
       <div class="form-group">
         <label>Subscribe to our news letter:</label><br><br>
