--- a/Lab2/GoogleKG/SuperSearch/src/app/google-kgsearch/google-kgsearch.component.html
+++ b/Lab2/GoogleKG/SuperSearch/src/app/google-kgsearch/google-kgsearch.component.html
@@ -12,11 +12,11 @@
                 <mat-icon *ngIf="recognizing">stop</mat-icon>
               </button>
             </div>
-            <input type="text" [value]="finalTranscript" class="input" placeholder="Search or Speak Anything..." #place>
+            <input type="text" [value]="finalTranscript" class="input" placeholder="Search or Speak Anything..." #query>
 
             <mat-card *ngIf="recognizing" class="notification">{{notification}}</mat-card>
           </div><br>
-          <button id = "searchBtn" class="w3-button w3-red w3-round-xlarge w3-xxlarge col-lg-4 col-lg-offset-4 " (click)="getVenues()"> GET RESULTS NOW!</button>
+          <button id = "searchBtn" class="w3-button w3-red w3-round-xlarge w3-xxlarge col-lg-4 col-lg-offset-4 " (click)="getResults()"> GET RESULTS NOW!</button>
 
         </div>
       </div>
@@ -31,14 +31,14 @@
         <div class="panel-heading"><h3> Results </h3></div>
         <div class="panel-body">
 
-          <div *ngFor="let venue of venueList; let i = index" id = 'result' class="list-group-item clearfix">
+          <div *ngFor="let result of resultList; let i = index" id = 'result' class="list-group-item clearfix">
             <div class="pull-left">
               <div class = resultBoard>
 
-                <h2 class="list-group-item-heading">{{ venue.name }}</h2>
+                <h2 class="list-group-item-heading">{{ result.name }}</h2>
                 <span class="pull-right">
              <a class = 'floatImg' id (click)="showModal(i)">
-               <img border="0" alt="Image Not Available" src="{{venue.imgURL}}" width="130" height="130"></a>
+               <img border="0" alt="Image Not Available" src="{{result.imgURL}}" width="130" height="130"></a>
 
 
                   <!--Image Modal-->
@@ -46,15 +46,15 @@
           <div class="w3-modal-content" style = 'width: 100%;'>
             <div class="w3-container" style="text-align: center">
               <span (click)="hideModal(i)" class="w3-button w3-display-topright">&times;</span>
-              <img border="0" alt="Image Not Available" src="{{venue.imgURL}}" width="130" height="130" >
+              <img border="0" alt="Image Not Available" src="{{result.imgURL}}" width="130" height="130" >
             </div>
           </div>
         </div>
             </span>
                 <h3 class="list-group-item-info"> Summary </h3>
-                <p class="list-group-item-text" style = "text-align: center"> {{venue.description}}</p>
+                <p class="list-group-item-text" style = "text-align: center"> {{result.description}}</p>
                 <h3 class="list-group-item-info"> Description </h3>
-                <p class="list-group-item-text">{{venue.detailedDescription}}</p>
+                <p class="list-group-item-text">{{result.detailedDescription}}</p>
 
               </div>
 
