--- a/Lab2/Snake/src/app/board/board.component.css
+++ b/Lab2/Snake/src/app/board/board.component.css
@@ -21,6 +21,13 @@
   padding: 3rem;
   border: 2px solid white;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.banner * {
+  margin: 0;
+  padding: 0;
 }
 
 #modes {
@@ -32,14 +39,20 @@
 #modes td {
   width: calc(100% / 3);
   cursor: pointer;
+  font-family: 'arcadeclassic', sans-serif;
+  font-size: 18px;
 }
 
 #modes td span {
-  display: none;
+  opacity: 0;
 }
 
 #modes td:hover span {
-  display: inline;
+  opacity: 0.5;
+}
+
+#modes td.selected span  {
+  opacity: 1;
 }
 
 /* Game Board */
@@ -60,8 +73,8 @@ h1 {
 }
 
 h2 {
-  font-family: monospace;
-  font-size: 2rem;
+  font-family: 'arcadeclassic', sans-serif;
+  font-size: 24px;
 }
 
 /* Tiles */
