--- a/Lab2/Snake/src/app/board/board.component.html
+++ b/Lab2/Snake/src/app/board/board.component.html
@@ -2,14 +2,14 @@
   <div class="banner" *ngIf="!started">
     <h1>Snake</h1>
     <h2 *ngIf="gameOver">GAME OVER</h2>
-    <table id="modes" *ngIf="gameOver || !started">
+    <table id="modes">
       <tr>
-        <td><span>[</span>Classic<span>]</span></td>
-        <td><span>[</span>No Walls<span>]</span></td>
-        <td><span>[</span>Obstacles<span>]</span></td>
+        <td [class.selected]="mode == Mode.Classic" (click)="mode = Mode.Classic"><span>[</span>Classic<span>]</span></td>
+        <td [class.selected]="mode == Mode.NoWalls" (click)="mode = Mode.NoWalls"><span>[</span>No Walls<span>]</span></td>
+        <td [class.selected]="mode == Mode.Obstacles" (click)="mode = Mode.Obstacles"><span>[</span>Obstacles<span>]</span></td>
       </tr>
     </table>
-    <h3>Press any key to play{{gameOver ? ' again' : ''}}.</h3>
+    <h3>Press the <kbd>SPACE BAR</kbd> to play{{gameOver ? ' again' : ''}}.</h3>
   </div>
 
   <table id="board">
