--- a/Lab3/Task1/src/app/login/login.component.css
+++ b/Lab3/Task1/src/app/login/login.component.css
@@ -1,3 +1,17 @@
-mat-card {
+.center {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.wrap {
   width: 400px;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+span {
+  margin-left: 1em;
 }
