--- a/Lab3/Task1/src/app/login/login.component.html
+++ b/Lab3/Task1/src/app/login/login.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
       <button mat-raised-button color="primary">Login</button>
-      <span>Register</span>
+      <span (click)="register">Register</span>
     </div>
     <!--  <div class="form-group">-->
     <!--    <button [disabled]="loading" class="btn btn-primary">Login</button>-->
