--- a/Lab3/Task1/src/app/login/login.component.css
+++ b/Lab3/Task1/src/app/login/login.component.css
@@ -14,4 +14,14 @@ mat-form-field {
 
 span {
   margin-left: 1em;
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
