--- a/Lab3/Task1/src/app/login/login.component.html
+++ b/Lab3/Task1/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <h2>Login</h2>
   <form [formGroup]="loginForm" (ngSubmit)="login()">
     <div class="form-group">
-      <mat-form-field class="example-full-width" [floatLabel]="loginForm.value.floatLabel">
+      <mat-form-field class="example-full-width" floatLabel="auto">
         <input matInput id="username" type="text" formControlName="username" class="form-control"
                [ngClass]="{ 'is-invalid': submitted && f.username.errors }" placeholder="Username"/>
       </mat-form-field>
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="form-group">
-      <mat-form-field class="example-full-width" [floatLabel]="loginForm.value.floatLabel">
+      <mat-form-field class="example-full-width" floatLabel="auto">
         <input matInput id="password" type="password" formControlName="password" class="form-control"
                [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password"/>
       </mat-form-field>
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="form-group">
-      <button mat-raised-button color="primary">Login</button>
+      <button mat-raised-button color="primary" type="submit">Login</button>
       <span><a routerLink="/register">Register</a></span>
     </div>
   </form>
