--- a/Lab3/Task1/src/app/register/register.component.html
+++ b/Lab3/Task1/src/app/register/register.component.html
@@ -1,3 +1,29 @@
-<p>
-  register works!
-</p>
+<div class="wrap center">
+  <h2>Sign Up</h2>
+
+  <form [formGroup]="registerForm" (ngSubmit)="register()">
+    <div class="form-group">
+      <mat-form-field floatLabel="auto">
+        <input matInput id="firstName" type="text" formControlName="firstName" class="form-control" placeholder="First Name">
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field floatLabel="auto">
+        <input matInput id="lastName" type="text" formControlName="lastName" class="form-control" placeholder="Last Name">
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field floatLabel="auto">
+        <input matInput id="email" type="email" formControlName="email" class="form-control" placeholder="Email">
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field floatLabel="auto">
+        <input matInput id="password" type="password" formControlName="password" class="form-control" placeholder="Password">
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <button mat-raised-button color="primary" type="submit">Sign Up</button>
+    </div>
+  </form>
+</div>
