Added profile page
Added profile page, fixed form validation.

--- a/Lab3/Task1/src/app/app.component.html
+++ b/Lab3/Task1/src/app/app.component.html
@@ -11,7 +11,7 @@
     </button>
     <button mat-menu-item>
       <mat-icon>account_circle</mat-icon>
-      <span>Profile</span>
+      <span><a routerLink="profile">Profile</a></span>
     </button>
     <button mat-menu-item>
       <mat-icon>power_settings_new</mat-icon>
