--- a/Lab3/Task1/src/app/profile/profile.component.css
+++ b/Lab3/Task1/src/app/profile/profile.component.css
@@ -1,21 +1,19 @@
-.grid-container {
-  margin: 20px;
-}
-
-.dashboard-card {
+.center {
   position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
 }
 
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
+.profile-card {
+  max-width: 400px;
 }
 
-.dashboard-card-content {
-  text-align: center;
+#avatar {
+  line-height: 40px;
+  vertical-align: middle;
+  font-size: 40px;
+}
+
+mat-icon {
+
 }
