Hook Client to Backend

--- a/Lab3/Task1/src/app/app.component.html
+++ b/Lab3/Task1/src/app/app.component.html
@@ -7,7 +7,7 @@
   <mat-menu #menu="matMenu">
     <button mat-menu-item>
       <mat-icon>home</mat-icon>
-      <span>Home</span>
+      <a routerLink="/">Home</a>
     </button>
     <button mat-menu-item>
       <mat-icon>account_circle</mat-icon>
