--- a/Lab3/Task1/src/app/register/register.component.html
+++ b/Lab3/Task1/src/app/register/register.component.html
@@ -4,12 +4,20 @@
   <form [formGroup]="registerForm" (ngSubmit)="register()">
     <div class="form-group">
       <mat-form-field floatLabel="auto">
-        <input matInput id="firstName" type="text" formControlName="firstName" class="form-control" placeholder="First Name">
+        <input matInput id="username" type="text" formControlName="username" class="form-control"
+               placeholder="Username">
       </mat-form-field>
     </div>
     <div class="form-group">
       <mat-form-field floatLabel="auto">
-        <input matInput id="lastName" type="text" formControlName="lastName" class="form-control" placeholder="Last Name">
+        <input matInput id="firstName" type="text" formControlName="firstName" class="form-control"
+               placeholder="First Name">
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field floatLabel="auto">
+        <input matInput id="lastName" type="text" formControlName="lastName" class="form-control"
+               placeholder="Last Name">
       </mat-form-field>
     </div>
     <div class="form-group">
@@ -19,7 +27,8 @@
     </div>
     <div class="form-group">
       <mat-form-field floatLabel="auto">
-        <input matInput id="password" type="password" formControlName="password" class="form-control" placeholder="Password">
+        <input matInput id="password" type="password" formControlName="password" class="form-control"
+               placeholder="Password">
       </mat-form-field>
     </div>
     <div class="form-group">
