--- a/Lab3/Task1/src/app/app.component.html
+++ b/Lab3/Task1/src/app/app.component.html
@@ -13,7 +13,7 @@
       <mat-icon>account_circle</mat-icon>
       <span><a routerLink="profile">Profile</a></span>
     </button>
-    <button mat-menu-item>
+    <button mat-menu-item (click)="logout()">
       <mat-icon>power_settings_new</mat-icon>
       <span>Logout</span>
     </button>
