Fixed validation messages

--- a/Lab3/Task1/src/app/login/login.component.css
+++ b/Lab3/Task1/src/app/login/login.component.css
@@ -25,3 +25,7 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+/*::ng-deep .mat-form-field-wrapper {*/
+/*  padding-bottom: 0 !important;*/
+/*}*/
