--- a/Lab3/Task1/src/app/login/login.component.html
+++ b/Lab3/Task1/src/app/login/login.component.html
@@ -4,20 +4,24 @@
     <div class="form-group">
       <mat-form-field class="example-full-width" floatLabel="auto">
         <input matInput id="username" type="text" formControlName="username" class="form-control"
-               [ngClass]="{ 'is-invalid': submitted && f.username.errors }" placeholder="Username"/>
+               placeholder="Username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
       </mat-form-field>
-      <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-        <div *ngIf="f.username.errors.required">Username is required</div>
-      </div>
+      <mat-error *ngIf="submitted && f.username.errors">
+        <div *ngIf="f.username.errors.required">
+          <small>Username is <strong>required</strong></small>
+        </div>
+      </mat-error>
     </div>
     <div class="form-group">
       <mat-form-field class="example-full-width" floatLabel="auto">
         <input matInput id="password" type="password" formControlName="password" class="form-control"
                [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password"/>
       </mat-form-field>
-      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-        <div *ngIf="f.password.errors.required">Password is required</div>
-      </div>
+      <mat-error *ngIf="submitted && f.password.errors">
+        <div *ngIf="f.password.errors.required">
+          <small>Password is <strong>required</strong></small>
+        </div>
+      </mat-error>
     </div>
     <div class="form-group">
       <button mat-raised-button color="primary" type="submit">Login</button>
