--- a/Lab3/Task1/src/app/profile/profile.component.html
+++ b/Lab3/Task1/src/app/profile/profile.component.html
@@ -1,13 +1,15 @@
 <mat-card class="profile-card center">
   <mat-card-header>
     <div mat-card-avatar id="avatar"><mat-icon [inline]="true">account_box</mat-icon></div>
-    <mat-card-title>{{firstName}} {{lastName}}</mat-card-title>
-    <mat-card-subtitle>User</mat-card-subtitle>
+    <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
+    <mat-card-subtitle>{{user.username}} ({{user.email}})</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <img *ngIf="user.imageUrl" mat-card-image [src]="user.imageUrl" alt="User Image">
   <mat-card-content>
-    <p>
-
-    </p>
+    <p>{{user.description}}</p>
   </mat-card-content>
+
+  <mat-card-actions>
+    <button mat-button routerLink="/edit-profile">Edit</button>
+  </mat-card-actions>
 </mat-card>
