--- a/Lab3/Task1/src/app/register/register.component.html
+++ b/Lab3/Task1/src/app/register/register.component.html
@@ -63,6 +63,18 @@
       </mat-error>
     </div>
     <div class="form-group">
+      <mat-form-field floatLabel="auto">
+        <input matInput id="imageUrl" type="imageUrl" formControlName="imageUrl" class="form-control"
+               placeholder="Image URL">
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field floatLabel="auto">
+        <textarea matInput id="description" type="description" formControlName="description" class="form-control"
+                  placeholder="Description"></textarea>
+      </mat-form-field>
+    </div>
+    <div class="form-group">
       <button mat-raised-button color="primary" type="submit">Sign Up</button>
     </div>
   </form>
