--- a/Lab3/Task1/src/app/login/login.component.html
+++ b/Lab3/Task1/src/app/login/login.component.html
@@ -6,11 +6,10 @@
         <input matInput id="username" type="text" formControlName="username"
                class="form-control" placeholder="Username"/>
       </mat-form-field>
-      <mat-error *ngIf="submitted && f.username.errors.required">
-        <small>Username is <strong>required</strong></small>
-      </mat-error>
-      <mat-error *ngIf="!submitted && f.username.errors.minlength">
-        <small>Username must be <strong>at least 4 characters in length</strong></small>
+      <mat-error *ngIf="submitted && f.username.errors">
+        <div *ngIf="f.username.errors.required">
+          <small>Username is <strong>required</strong></small>
+        </div>
       </mat-error>
     </div>
     <div class="form-group">
@@ -18,11 +17,10 @@
         <input matInput id="password" type="password" formControlName="password"
                class="form-control" placeholder="Password"/>
       </mat-form-field>
-      <mat-error *ngIf="submitted && f.password.errors.required">
-        <small>Password is <strong>required</strong></small>
-      </mat-error>
-      <mat-error *ngIf="!submitted && f.password.errors.minlength">
-        <small>Password must be <strong>at least 4 characters in length</strong></small>
+      <mat-error *ngIf="submitted && f.password.errors">
+        <div *ngIf="f.password.errors.required">
+          <small>Password is <strong>required</strong></small>
+        </div>
       </mat-error>
     </div>
     <div class="form-group">
