--- a/Lab3/Task1/src/app/edit-profile/edit-profile.component.html
+++ b/Lab3/Task1/src/app/edit-profile/edit-profile.component.html
@@ -28,6 +28,7 @@
     </div>
     <div class="form-group">
       <button mat-raised-button color="primary" type="submit">Update</button>
+      <span><a routerLink="/profile">Cancel</a></span>
     </div>
   </form>
 </div>
