--- a/Lab3/LoginApp/app/src/main/res/layout/activity_main.xml
+++ b/Lab3/LoginApp/app/src/main/res/layout/activity_main.xml
@@ -88,11 +88,11 @@
 
     <ImageView
         android:id="@+id/profileImg"
-        android:layout_width="100sp"
-        android:layout_height="100sp"
-        android:layout_marginBottom="26dp"
+        android:layout_width="159dp"
+        android:layout_height="162dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="26dp"
         android:src="@mipmap/ic_default_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
