--- a/Lab3/LoginApp/app/src/main/res/layout/activity_login.xml
+++ b/Lab3/LoginApp/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#E3F2F9"
     tools:context="com.csee5590.lab3.LoginActivity">
+
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
