--- a/Lab3/LoginApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/Lab3/LoginApp/app/src/main/res/layout/activity_sign_up.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#E3F2F9"
     tools:context="com.csee5590.lab3.SignUpActivity">
 
     <android.support.design.widget.AppBarLayout
