--- a/Lab3/LoginApp/app/src/main/res/layout/activity_edit_details.xml
+++ b/Lab3/LoginApp/app/src/main/res/layout/activity_edit_details.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
+    android:background="#E3F2F9"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.csee5590.lab3.SignUpActivity">
 
