Added screenshots for Lab3/Task1

--- a/Lab3/Task1/src/app/edit-profile/edit-profile.component.html
+++ b/Lab3/Task1/src/app/edit-profile/edit-profile.component.html
@@ -1,5 +1,5 @@
 <div class="wrap center">
-  <h2>Sign Up</h2>
+  <h2>Edit Profile</h2>
 
   <form [formGroup]="profileForm" (ngSubmit)="update()">
     <div class="form-group">
